# rustvault

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  README.md  README_BUILD.md  SETUP_GUIDE.md  build-web.sh  test-version-api.sh
src/: main.rs  tenant.rs  vault.rs  web.rs  web_session.rs
web-frontend/: index.html  package-lock.json  package.json  vite.config.js
web-frontend/src/: App.svelte
