[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
rusqlite = "0.29"
eframe = "0.27"
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
